// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetectorDescriptionList render for detector with anomaly values 1`] = `
<EuiDescriptionList
  align="left"
  className="rule-detector-description-list"
  compressed={false}
  listItems={
    Array [
      Object {
        "description": "responsetimes",
        "title": "Job ID",
      },
      Object {
        "description": "mean response time",
        "title": "Detector",
      },
      Object {
        "description": "actual 50, typical 1.23",
        "title": "Selected anomaly",
      },
    ]
  }
  textStyle="normal"
  type="column"
/>
`;

exports[`DetectorDescriptionList render for population detector with no anomaly values 1`] = `
<EuiDescriptionList
  align="left"
  className="rule-detector-description-list"
  compressed={false}
  listItems={
    Array [
      Object {
        "description": "population",
        "title": "Job ID",
      },
      Object {
        "description": "count by status over clientip",
        "title": "Detector",
      },
    ]
  }
  textStyle="normal"
  type="column"
/>
`;
